<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.sdpcryptogram.AddPlayerActivity">

<!-- EditText for getting task description input -->
<EditText
    android:id="@+id/player_username_edit_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:hint="@string/player_username_hint"
    android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/player_fname_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/player_fname_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/player_lname_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/player_lname_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/player_password_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/player_password_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <!-- Add button -->
<Button
    android:id="@+id/player_add_button"
    style="@style/TextAppearance.AppCompat.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:onClick="onClickAddPlayer"
    android:text="@string/player_add_button_label"
    android:textColor="@android:color/primary_text_dark"/>

</LinearLayout>
