<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_id_text_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/default_player_id"/>

        <TextView
            android:id="@+id/player_username_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="@string/default_player_username"/>

        <TextView
            android:id="@+id/player_fname_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="@string/default_player_fname"/>

        <TextView
            android:id="@+id/player_lname_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="@string/default_player_lname"/>

        <TextView
            android:id="@+id/player_pw_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="Password"/>

    </LinearLayout>
    <!-- A gray divider line at the bottom of each task -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>