<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cryptogram_uid_text_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/default_cryptogram_uid"/>

        <TextView
            android:id="@+id/cryptogram_puzzle_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="12dp"
            android:gravity="left"
            android:textSize="16sp"
            android:layout_weight="0.6"
            android:text="@string/default_cryptogram_puzzle_default_text"/>

        <ImageView
            android:id="@+id/cryptogram_is_solved_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <!--
        <TextView
            android:id="@+id/cryptogram_is_solved_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="@string/default_cryptogram_is_solved"/>
        -->

        <TextView
            android:id="@+id/cryptogram_incorrect_submissions_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="0.1"
            android:fontFamily="sans-serif"
            android:text="@string/default_cryptogram_incorrect_submissions"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- A gray divider line at the bottom of each task -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>